Slider images change

--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 					  <ol class="carousel-indicators">
 						<li data-target="#thumbnail-preview-indicators" data-slide-to="0" class="active">
 						  <div class="thumbnail">
-							<img class="img-responsive" src="https://s3.amazonaws.com/ooomf-com-files/wdXqHcTwSTmLuKOGz92L_Landscape.jpg">
+							<img class="img-responsive" src="resources/images/slider1.jpg">
 						  </div>
 						</li>
 						<li data-target="#thumbnail-preview-indicators" data-slide-to="1">
 						<div class="thumbnail">
-							<img class="img-responsive" src="https://s3.amazonaws.com/ooomf-com-files/tU3ptNgGSP6U2fE67Gvy_SYDNEY-162.jpg">
+							<img class="img-responsive" src="resources/images/slider2.jpg">
 						  </div>
 						</li>
 						<li data-target="#thumbnail-preview-indicators" data-slide-to="2">
 						<div class="thumbnail">
-							<img class="img-responsive" src="https://s3.amazonaws.com/ooomf-com-files/mtNrf7oxS4uSxTzMBWfQ_DSC_0043.jpg">
+							<img class="img-responsive" src="resources/images/slider3.jpg">
 						  </div>
 						</li>
 					  </ol>
@@ -71,9 +71,7 @@
 						  <div class="slide-1"></div>
 						  <div class="container">
 							<div class="carousel-caption">
-							  <h1>New carousel layout</h1>
-							  <p>Responsive thumbnail preview in carousel indicators.</p>
-							  <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+								<h1>Slider headline 1</h1>
 							</div>
 						  </div>
 						</div>
@@ -81,9 +79,7 @@
 						  <div class="slide-2"></div>
 						  <div class="container">
 							<div class="carousel-caption">
-							  <h1>Another example headline.</h1>
-							  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-							  <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+							  <h1>Slider headline 2</h1>
 							</div>
 						  </div>
 						</div>
@@ -91,9 +87,7 @@
 						  <div class="slide-3"></div>
 						  <div class="container">
 							<div class="carousel-caption">
-							  <h1>One more for good measure.</h1>
-							  <p>Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-							  <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+								<h1>Slider headline 3</h1>
 							</div>
 						  </div>
 						</div>
