Updated whole website for develop branch

--- a/about-us.html
+++ b/about-us.html
@@ -1,115 +1,196 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Yoga - way of life</title>
-		
-		<meta charset="utf-8">
-	  	<meta name="viewport" content="width=device-width, initial-scale=1">
-	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-		
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-		
-		<link rel="stylesheet" href="resources/css/footer-distributed-with-address-and-phones.css">
-		<link rel="stylesheet" type="text/css" href="resources/css/styles.css">
-		<link rel="stylesheet" type="text/css" href="resources/css/slider.css">
-	</head>
-	<body>
-		<header>
-			<nav class="navbar navbar-inverse navbar-fixed-top jb-header-navigation">
-				<div class="container-fluid jb-header-container">
-					<div class="navbar-header"> 
-						<button type="button" class="collapsed navbar-toggle jb-hamburger-button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
-							<span class="sr-only">Toggle navigation</span> 
-							<span class="icon-bar"></span> 
-							<span class="icon-bar"></span> 
-							<span class="icon-bar"></span> 
-						</button> 
-						<a href="#" class="navbar-brand">
-							<img src="resources/images/brand-icon.png" title="Yoga website">
-						</a> 
-					</div> 
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9"> 
-						<ul class="nav navbar-nav jb-navigation-list"> 
-							<li><a href="index.html">Home</a></li> 
-							<li><a href="articles.html">Articles</a></li>
-							<li class="active"><a href="about-us.html">About Us</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
-						</ul> 
-					</div>
-				</div>
-			</nav>
-		</header>
-		
-		<section class="jb-main-content">
-			
-			
-		</section>
-		
-		<footer class="footer-distributed">
-			<div class="footer-left">
-				<h3>
-					<img src="resources/images/brand-icon.png" title="Yoga website">
-				</h3>
+<head>
+    <title>Yoga - way of life</title>
 
-				<p class="footer-links">
-					<a href="#">Home</a>
-					·
-					<a href="#">Blog</a>
-					·
-					<a href="#">Pricing</a>
-					·
-					<a href="#">About</a>
-					·
-					<a href="#">Faq</a>
-					·
-					<a href="#">Contact</a>
-				</p>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 
-				<p class="footer-company-name">Company Name &copy; 2018</p>
-			</div>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
-			<div class="footer-center">
+    <link rel="stylesheet" href="resources/css/footer-distributed-with-address-and-phones.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/slider.css">
+</head>
+<body>
+<header>
+    <nav class="navbar navbar-inverse navbar-fixed-top jb-header-navigation">
+        <div class="container-fluid jb-header-container">
+            <div class="navbar-header">
+                <button type="button" class="collapsed navbar-toggle jb-hamburger-button" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-brand">
+                    <img src="resources/images/brand-icon.png" title="Yoga website">
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+                <ul class="nav navbar-nav jb-navigation-list">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="articles.html">Articles</a></li>
+                    <li class="active"><a href="about-us.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
-				<div>
-					<i class="fa fa-map-marker"></i>
-					<p><span>Street name/number</span> Belgrade, Serbia</p>
-				</div>
+<section class="jb-main-content">
+    <div class="header-image">
+        <div class="header-overlay"></div>
+        <div class="header-info">
+            <h3 class="header-text"></h3>
+            <div class="header-buttons">
+            </div>
+        </div>
+    </div>
+    <div class="jb-about-us-wrapper col-xs-12">
+        <div class="container">
+            <div class="row">
+                <section class="card text-card" id="about-about">
+                    <h1 class="text-mission">- Our Mission -</h1>
+                    <p class="text-goal">To provide the most actionable app store data.</p>
+                    <div class="jb-about-us-image">
+                        <img srcset="https://d39afr5wio5j08.cloudfront.net/assets-p/about/eliran-sapir@2x-0c3319c1ea8468e6b0052625adf5742b010a9900347a3ba399725012e8eb89ba.jpg 2x"
+                             class="img-circle img-fluid m-x-auto m-b" style="width: 112px;"
+                             src="https://d39afr5wio5j08.cloudfront.net/assets-p/about/eliran-sapir-e310d7008a929a0862275db895ae08bb391f564f6ae23ecbf533fdd2a2d48cd5.jpg"
+                             alt="Eliran sapir">
+                        <h3 class="text-md text-bold">Eli Sapir</h3>
+                        <p class="text-xxxs m-b-sm text-uppercase">Co-founder &amp; CEO</p>
+                    </div>
+                    <h2 class="text-about">About</h2>
+                    <div class="text-justify">
+                        <p class="first">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec odio neque, euismod ut arcu
+                            at, porta malesuada dolor. Fusce consequat turpis in interdum rhoncus. Nullam aliquet congue
+                            maximus. Quisque quis sapien et sem vestibulum malesuada. Suspendisse et felis semper,
+                            vehicula elit non, scelerisque erat. Nunc ut turpis hendrerit, laoreet erat consectetur,
+                            semper arcu. Duis est mauris, suscipit placerat gravida in, congue nec erat. Vivamus purus
+                            leo, rutrum quis nunc condimentum, porttitor facilisis orci. Praesent tempor sem non metus
+                            laoreet rutrum eget vitae lorem. Mauris libero risus, dignissim sed dignissim ultrices,
+                            rhoncus luctus ligula. Duis et aliquam nulla, et rhoncus lorem.
 
-				<div>
-					<i class="fa fa-phone"></i>
-					<p>+381 999 9999</p>
-				</div>
+                            Proin sit amet ornare urna. Sed nec nisi pellentesque, auctor diam sit amet, aliquam quam.
+                            Mauris et consectetur justo, vitae elementum erat. Phasellus ut fringilla ligula. Praesent
+                            semper, est ac consectetur commodo, quam odio semper libero, quis maximus tortor lorem ac
+                            ante. Aenean posuere congue sapien sit amet iaculis. Suspendisse finibus dolor vel pretium
+                            tristique. Morbi commodo egestas erat, vitae mattis dui feugiat at. Nulla pretium vitae nisl
+                            ullamcorper fringilla.
 
-				<div>
-					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:petkovicjovan88@gmail.com">support@company.com</a></p>
-				</div>
+                            Sed sit amet elit pulvinar, semper urna in, sollicitudin nibh. Duis fermentum tortor enim,
+                            quis varius lacus pretium nec. Duis ac lectus leo. Cras sollicitudin augue in consectetur
+                            consectetur. Sed in purus diam. Class aptent taciti sociosqu ad litora torquent per conubia
+                            nostra, per inceptos himenaeos. Integer auctor ipsum sit amet diam condimentum, vel pulvinar
+                            elit cursus.
+                        </p>
+                        <p class="second">
 
-			</div>
+                        </p>
+                    </div>
+                </section>
+                <section class="" id="about-locations">
+                    <h2 class="jb-locations-text">Locations</h2>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-4">
+                            <p class="text-xs m-b-lg text-xxs-center text-sm-left">
+                                <span class="text-bold">Yoga website</span> is headquartered<br>in<span class="text-bold">Belgrade, SR</span>.
+                            </p>
+                            <div class="text-quiet">
+                                <address class="">
+                                    <a id="boston-headquaters" href="#">
+                                        <i class="hicon-map-marker"></i>Belgrade (Headquaters)
+                                    </a><br>Street<br>3rd Floor<br>City
+                                </address>
+                                <address class="">
+                                    <a id="other-city-headquaters" href="#">
+                                        <i class="hicon-map-marker"></i>Belgrade (Headquaters)
+                                    </a><br>Street<br>3rd Floor<br>City
+                                </address>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-8 jb-location-iframe">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d38094.43784745657!2d20.414496094601176!3d44.79332087530744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7aa3d7b53fbd%3A0x1db8645cf2177ee4!2z0JHQtdC-0LPRgNCw0LQ!5e0!3m2!1ssr!2srs!4v1525541681795" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
 
-			<div class="footer-right">
+</section>
 
-				<p class="footer-company-about">
-					<span>About the company</span>
-					Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
-				</p>
+<footer class="footer-distributed">
+    <div class="footer-left">
+        <h3>
+            <img src="resources/images/brand-icon.png" title="Yoga website">
+        </h3>
 
-				<div class="footer-icons">
+        <p class="footer-links">
+            <a href="#">Home</a>
+            ·
+            <a href="#">Blog</a>
+            ·
+            <a href="#">Pricing</a>
+            ·
+            <a href="#">About</a>
+            ·
+            <a href="#">Faq</a>
+            ·
+            <a href="#">Contact</a>
+        </p>
 
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
+        <p class="footer-company-name">Company Name &copy; 2018</p>
+    </div>
 
-				</div>
+    <div class="footer-center">
 
-			</div>
+        <div>
+            <i class="fa fa-map-marker"></i>
+            <p><span>Street name/number</span> Belgrade, Serbia</p>
+        </div>
 
-		</footer>
-		
-		<script src="resources/js/jb.js"></script>
-	</body>
+        <div>
+            <i class="fa fa-phone"></i>
+            <p>+381 999 9999</p>
+        </div>
+
+        <div>
+            <i class="fa fa-envelope"></i>
+            <p><a href="mailto:petkovicjovan88@gmail.com">support@company.com</a></p>
+        </div>
+
+    </div>
+
+    <div class="footer-right">
+
+        <p class="footer-company-about">
+            <span>About the company</span>
+            Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus
+            vehicula sit amet.
+        </p>
+
+        <div class="footer-icons">
+
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-github"></i></a>
+
+        </div>
+
+    </div>
+
+</footer>
+
+<script src="resources/js/jb.js"></script>
+</body>
 </html>
