--- a/articles.html
+++ b/articles.html
@@ -1,115 +1,196 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Yoga - way of life</title>
-		
-		<meta charset="utf-8">
-	  	<meta name="viewport" content="width=device-width, initial-scale=1">
-	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-		
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-		
-		<link rel="stylesheet" href="resources/css/footer-distributed-with-address-and-phones.css">
-		<link rel="stylesheet" type="text/css" href="resources/css/styles.css">
-		<link rel="stylesheet" type="text/css" href="resources/css/slider.css">
-	</head>
-	<body>
-		<header>
-			<nav class="navbar navbar-inverse navbar-fixed-top jb-header-navigation">
-				<div class="container-fluid jb-header-container">
-					<div class="navbar-header"> 
-						<button type="button" class="collapsed navbar-toggle jb-hamburger-button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
-							<span class="sr-only">Toggle navigation</span> 
-							<span class="icon-bar"></span> 
-							<span class="icon-bar"></span> 
-							<span class="icon-bar"></span> 
-						</button> 
-						<a href="#" class="navbar-brand">
-							<img src="resources/images/brand-icon.png" title="Yoga website">
-						</a> 
-					</div> 
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9"> 
-						<ul class="nav navbar-nav jb-navigation-list"> 
-							<li><a href="index.html">Home</a></li> 
-							<li class="active"><a href="articles.html">Articles</a></li>
-							<li><a href="about-us.html">About Us</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
-						</ul> 
-					</div>
-				</div>
-			</nav>
-		</header>
-		
-		<section class="jb-main-content">
-			
-			
-		</section>
-		
-		<footer class="footer-distributed">
-			<div class="footer-left">
-				<h3>
-					<img src="resources/images/brand-icon.png" title="Yoga website">
-				</h3>
+    <head>
+    <title>Yoga - way of life</title>
 
-				<p class="footer-links">
-					<a href="#">Home</a>
-					·
-					<a href="#">Blog</a>
-					·
-					<a href="#">Pricing</a>
-					·
-					<a href="#">About</a>
-					·
-					<a href="#">Faq</a>
-					·
-					<a href="#">Contact</a>
-				</p>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 
-				<p class="footer-company-name">Company Name &copy; 2018</p>
-			</div>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
-			<div class="footer-center">
+    <link rel="stylesheet" href="resources/css/footer-distributed-with-address-and-phones.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/slider.css">
+</head>
+    <body>
+        <header>
+            <nav class="navbar navbar-inverse navbar-fixed-top jb-header-navigation">
+                <div class="container-fluid jb-header-container">
+                    <div class="navbar-header">
+                        <button type="button" class="collapsed navbar-toggle jb-hamburger-button" data-toggle="collapse"
+                                data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a href="#" class="navbar-brand">
+                            <img src="resources/images/brand-icon.png" title="Yoga website">
+                        </a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+                        <ul class="nav navbar-nav jb-navigation-list">
+                            <li><a href="index.html">Home</a></li>
+                            <li class="active"><a href="articles.html">Articles</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
-				<div>
-					<i class="fa fa-map-marker"></i>
-					<p><span>Street name/number</span> Belgrade, Serbia</p>
-				</div>
+        <section class="jb-main-content">
+            <div class="header-image">
+                <div class="header-overlay"></div>
+                <div class="header-info">
+                    <h3 class="header-text"></h3>
+                    <div class="header-buttons">
+                    </div>
+                </div>
+            </div>
 
-				<div>
-					<i class="fa fa-phone"></i>
-					<p>+381 999 9999</p>
-				</div>
+            <article class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jb-articles-category-wrapper">
+                <div class="container jb-articles-container">
+                    <div class="row content">
+                        <div class="col-sm-12">
+                            <h2 class="custom-title-articles">Browse Articles (Text)</h2>
 
-				<div>
-					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:petkovicjovan88@gmail.com">support@company.com</a></p>
-				</div>
+                            <div class="loop-item col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                                <div class="item-wrap">
+                                    <div class="icon">
+                                        <a href="#"><i class="glyphicon glyphicon-th-large"></i></a>
+                                    </div>
+                                    <div class="item-featured">
+                                        <a href="#" title="">
+                                            <img width="600" height="450" src="resources/images/article-image1.jpg" alt="class_10">
+                                        </a>
+                                    </div>
+                                    <div class="item-content">
+                                        <h3 class="item-title">
+                                            <a href="#" title="">Vinyasa Class</a>
+                                        </h3>
+                                        <div class="info">
+                                            <span class="time">19/05/15 - 01:00pm - 03:00pm </span>
+                                            <span>By <em>John Doe</em></span>
+                                        </div>
+                                        <div class="learn-more">
+                                            <a class="btn-darker" href="#" title="">Read more </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
 
-			</div>
+            <article class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jb-articles-category-wrapper">
+                <div class="container jb-articles-container">
+                    <div class="row content">
+                        <div class="col-sm-12">
+                            <h2 class="custom-title-articles">Browse Articles (Text+Video)</h2>
 
-			<div class="footer-right">
+                            <div class="loop-item col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                                <div class="item-wrap">
+                                    <div class="icon">
+                                        <a href="#"><i class="glyphicon glyphicon-play-circle"></i></a>
+                                    </div>
+                                    <div class="item-featured">
+                                        <a href="#" title="">
+                                            <img width="600" height="450" src="resources/images/article-image1.jpg" alt="class_10">
+                                        </a>
+                                    </div>
+                                    <div class="item-content">
+                                        <h3 class="item-title">
+                                            <a href="#" title="">Vinyasa Class</a>
+                                        </h3>
+                                        <div class="info">
+                                            <span class="time">19/05/15 - 01:00pm - 03:00pm </span>
+                                            <span>By <em>John Doe</em></span>
+                                        </div>
+                                        <div class="learn-more">
+                                            <a class="btn-darker" href="#" title="">Read more </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
 
-				<p class="footer-company-about">
-					<span>About the company</span>
-					Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
-				</p>
 
-				<div class="footer-icons">
 
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
+        </section>
 
-				</div>
+        <footer class="footer-distributed">
+            <div class="footer-left">
+                <h3>
+                    <img src="resources/images/brand-icon.png" title="Yoga website">
+                </h3>
 
-			</div>
+                <p class="footer-links">
+                    <a href="#">Home</a>
+                    ·
+                    <a href="#">Blog</a>
+                    ·
+                    <a href="#">Pricing</a>
+                    ·
+                    <a href="#">About</a>
+                    ·
+                    <a href="#">Faq</a>
+                    ·
+                    <a href="#">Contact</a>
+                </p>
 
-		</footer>
-		
-		<script src="resources/js/jb.js"></script>
-	</body>
+                <p class="footer-company-name">Company Name &copy; 2018</p>
+            </div>
+
+            <div class="footer-center">
+
+                <div>
+                    <i class="fa fa-map-marker"></i>
+                    <p><span>Street name/number</span> Belgrade, Serbia</p>
+                </div>
+
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <p>+381 999 9999</p>
+                </div>
+
+                <div>
+                    <i class="fa fa-envelope"></i>
+                    <p><a href="mailto:petkovicjovan88@gmail.com">support@company.com</a></p>
+                </div>
+
+            </div>
+
+            <div class="footer-right">
+
+                <p class="footer-company-about">
+                    <span>About the company</span>
+                    Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus
+                    vehicula sit amet.
+                </p>
+
+                <div class="footer-icons">
+
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-github"></i></a>
+
+                </div>
+
+            </div>
+
+        </footer>
+
+        <script src="resources/js/jb.js"></script>
+    </body>
 </html>
