--- a/index.html
+++ b/index.html
@@ -44,64 +44,16 @@
 		</header>
 		
 		<section class="jb-main-content">
-			
-			<!-- Slider -->
-			<article class="col-lg-12 col-md-12 col-sm-12 jb-slider-container">
-				<div id="thumbnail-preview-indicators" class="carousel slide" data-ride="carousel">
-					  <!-- Indicators -->
-					  <ol class="carousel-indicators">
-						<li data-target="#thumbnail-preview-indicators" data-slide-to="0" class="active">
-						  <div class="thumbnail">
-							<img class="img-responsive" src="resources/images/slider1.jpg">
-						  </div>
-						</li>
-						<li data-target="#thumbnail-preview-indicators" data-slide-to="1">
-						<div class="thumbnail">
-							<img class="img-responsive" src="resources/images/slider2.jpg">
-						  </div>
-						</li>
-						<li data-target="#thumbnail-preview-indicators" data-slide-to="2">
-						<div class="thumbnail">
-							<img class="img-responsive" src="resources/images/slider3.jpg">
-						  </div>
-						</li>
-					  </ol>
-					  <div class="carousel-inner">
-						<div class="item slides active">
-						  <div class="slide-1"></div>
-						  <div class="container">
-							<div class="carousel-caption">
-								<h1>Slider headline 1</h1>
-							</div>
-						  </div>
-						</div>
-						<div class="item slides">
-						  <div class="slide-2"></div>
-						  <div class="container">
-							<div class="carousel-caption">
-							  <h1>Slider headline 2</h1>
-							</div>
-						  </div>
-						</div>
-						<div class="item slides">
-						  <div class="slide-3"></div>
-						  <div class="container">
-							<div class="carousel-caption">
-								<h1>Slider headline 3</h1>
-							</div>
-						  </div>
-						</div>
-					  </div>
-					  <a class="left carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-					  <a class="right carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-				  </div>
-				
-				<div class="jb-slider-container-image">
-					<img src="resources/images/responsive-slider-image.jpg">
+
+			<div class="header-image">
+				<div class="header-overlay"></div>
+				<div class="header-info">
+					<h3 class="header-text"></h3>
+					<div class="header-buttons">
+					</div>
 				</div>
-			</article>
-			
-			<!-- Articles -->
+			</div>
+
 			<article class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jb-content-container">
 				<div class="container jb-articles-container">
 					<div class="row content">
@@ -110,6 +62,9 @@
 							
 							<div class="loop-item col-xs-12 col-sm-6 col-md-4 col-lg-3">
 								<div class="item-wrap">
+									<div class="icon">
+										<a href="#"><i class="glyphicon glyphicon-th-large"></i></a>
+									</div>
 									<div class="item-featured">
 										<a href="#" title="">
 											<img width="600" height="450" src="resources/images/article-image1.jpg" alt="class_10">
